--- a/Projet Web Commerce/Views/MainMenu/GestionVendeurs.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/GestionVendeurs.cshtml
@@ -1,37 +1,60 @@
 ﻿@model List<Projet_Web_Commerce.Models.PPVendeurs>
+@{
+    ViewData["Title"] = "Gestion des vendeurs";
+}
 
-<div class="row">
-    <div class="col">
-        <section>
-
-            <h3>Liste des Vendeurs à confirmer</h3>
-            <div class="container mt-4">
-                @if (Model != null && Model.Any())
-                {
-                    <div class="row">
-                        @foreach (var item in Model)
+<html>
+    <body>
+        <div class="row">
+            <div class="col">
+                <section>
+                    <h3>Liste des vendeurs à confirmer</h3>
+                    <div class="container mt-4">
+                        @if (Model != null && Model.Any())
                         {
-                            <div class="col-md-6 mb-4">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h5 class="card-title">@Html.DisplayFor(modelItem => item.AdresseEmail)</h5>
-                                        <p class="card-text">No Vendeur: @Html.DisplayFor(modelItem => item.NoVendeur)</p>
-                                        <p class="card-text">Date de demande : @Html.DisplayFor(modelItem => item.DateCreation)</p>
-                                        <form asp-controller="MainMenu" method="post">
-                                            <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
-                                            <button type="submit" class="btn btn-primary">Accepter</button>
-                                        </form>
+                            <div class="row">
+                                @foreach (var item in Model)
+                                {
+                                    <div class="col-md-6 mb-4">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <h5 class="card-title">@Html.DisplayFor(modelItem => item.AdresseEmail)</h5>
+                                                <p class="card-text">No Vendeur: @Html.DisplayFor(modelItem => item.NoVendeur)</p>
+                                                <p class="card-text">Date de demande : @Html.DisplayFor(modelItem => item.DateCreation)</p>
+                                                <form asp-controller="MainMenu" id="frmGestionVendeur" method="post">
+                                                    <div class="form-floating mb-3">
+                                                        <input type="number" name="Pourcentage" value="0" min="0" max="100" step="0.01" class="form-control" />
+                                                        <label class="form-label">Pourcentage (taux de redevance)</label>
+                                                    </div>
+                                                    <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
+                                                    <input type="hidden" id="vendeurAccepte" name="vendeurAccepte" />
+                                                    <div class="btn-group" role="group" aria-label="Groupe de boutons">
+                                                        <button onclick="submitForm(true)" class="btn btn-primary">Accepter</button>
+                                                        <button onclick="submitForm(false)" class="btn btn-secondary">Refuser</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
+                                }
                             </div>
                         }
+                        else
+                        {
+                            <p>Aucun vendeur à confirmer.</p>
+                        }
                     </div>
-                }
-                else
-                {
-                    <p>Aucun vendeur à confirmer.</p>
-                }
+                </section>
             </div>
-        </section>
-    </div>
-</div>
+        </div>
+
+        <script type="text/javascript">
+            function submitForm(value) {
+                document.getElementById('vendeurAccepte').value = value;
+
+                document.getElementById('frmGestionVendeur').submit();
+            }
+        </script>
+    </body>
+</html>
+
